Revision history for Perl extension pler

1.00 Sun  3 Jan 2010
	- Switching to a production version
	- Added support for the xt directory
	- Upgraded to Module::Install::DSL 0.91

0.34 Mon 30 Jun 2008
	- Optimising file search to half the number of stat
	  calls that need to be made to the system.

0.33 Fri 18 Apr 2008
	- Enable HARNESS_ACTIVE when calling scripts

0.32 Tue  1 Jan 2008
	- Replacing the use of $^X with Probe::Perl

0.31 Thu 27 Sep 2007
	- Fixing multiple filters
	- Incrementing to get new author tests
	- Upgrading to Module::Install 0.68

0.30 Thu  6 Sep 2007
	- Adding support for multiple filters
	- Detect the distroot correctly from multiple
	  levels down subdirectories.

0.29 Fri 14 Sep 2007
	- Bug in multiple filters would cause an infinite loop, fixed
	- Fix a mistake in the version mismatch error message

0.28 Fri 14 Sep 2007
	- Added support for multiple filters, to make life easier in big test suites
	  (So stuff like "pler db 4" will match t/db-tests/04_foo.t but not t/04_static.t)
	- All pattern filters are now case-insensitive
	- Bug Fix: Stopped needlessly running ./Build every time
	  (A typo meant I was statting the wrong file in the shortcutting test)
	- Script now tests that it loads the module with matching version
	- Adding explicit dependencies for core modules (just in case)

0.27 Mon 27 Aug 2007
	- Added a first experimental attempt at Module::Build support

0.26 Mon 27 Aug 2007
	- Adding a -V option for the version
	- Adding a --help option for help/usage
	- Adding -w which will be passed through to the underlying perl call

0.25 Tue 21 Aug 2007
	- When inside the t directory and the user uses tab-completion to specify the
	  filename, call the file they meant even after we chdir up to the root.
	- If the root has a Makefile, but NOT a Makefile.PL, don't run it and risk
	  causing some unknown functionality to run.

0.24 Tue 21 Aug 2007
	- I am an idiot, and didn't actually USE the Cwd::chdir in the below release